--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ title                    : "COZYMA "
 title_separator          : "-"
 name                     : "Im Ho Jeong"
 description              : "An amazing website."
-url                      : "https://imhojeong.github.io/MyBlog/index.html"
+url                      : "https://imhojeong.github.io/MyBlog"
 baseurl                  : ""
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
