--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ title_separator          : "-"
 name                     : "Im Ho Jeong"
 description              : "An amazing website."
 url                      : "https://imhojeong.github.io/MyBlog"
-baseurl                  : ""
+baseurl                  : "/blob"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 # breadcrumbs            : false # true, false (default)
