--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt"
 remote_theme : mmistakes/minimal-mistakes
 # Site Settings
 locale                   : "en-US"
-title                    : "COZYMA "
+title                    : "COZYMA -> Connect Project "
 title_separator          : "-"
 name                     : "Im Ho Jeong"
 description              : "An amazing website."
@@ -121,6 +121,12 @@ author:
     - label: "윤 신 Blog"
       icon: "fas fa-fw fa-envelope-square"
       url: "http://blog.naver.com/wvs018"   
+    - label: "정성욱 Blog"
+      icon: "fas fa-fw fa-envelope-square"
+      url: "https://m.blog.naver.com/PostList.nhn?blogId=su_j615"   
+    - label: "이용재 Blog"
+      icon: "fas fa-fw fa-envelope-square"
+      url: "https://dididy.github.io/"   
     - label: "Website"
       icon: "fas fa-fw fa-link"
       # url: "https://your-website.com"
