Add utterances in My Repo

--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt"
 remote_theme : mmistakes/minimal-mistakes
 # Site Settings
 locale                   : "en-US"
-title                    : "COZYMA -> Connect Project "
+title                    : "COZYMA -> Connect Project -> Top&Bottom"
 title_separator          : "-"
 name                     : "Im Ho Jeong"
 description              : "An amazing website."
@@ -127,6 +127,18 @@ author:
     - label: "이용재 Blog"
       icon: "fas fa-fw fa-envelope-square"
       url: "https://mogacko.github.io/"   
+    - label: "예부해 Blog"
+      icon: "fas fa-fw fa-envelope-square"
+      url: "https://blog.naver.com/qngo123"   
+    - label: "한원희 Blog"
+      icon: "fas fa-fw fa-envelope-square"
+      url: "https://blog.naver.com/redchoco_6"   
+    - label: "이준상 Blog"
+      icon: "fas fa-fw fa-envelope-square"
+      url: "https://blog.naver.com/asd123fg2"
+    - label: "천원준 Blog"
+      icon: "fas fa-fw fa-envelope-square"
+      url: "https://wonjunchun.github.io/"   
     - label: "Website"
       icon: "fas fa-fw fa-link"
       # url: "https://your-website.com"
